<resources>
    <string name="app_name">TokoKelontong</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_keranjang">Keranjang</string>
    <string name="title_akun">Akun</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cari">Cari disini</string>
    <string name="new_product">Produk Terbaru</string>
    <string name="ic_chat">icon_chat</string>
    <string name="ic_produk">icon_produk</string>
</resources>