<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        android:background="@color/dark_blue">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_toLeftOf="@+id/icn_chat"
            android:layout_toStartOf="@+id/icn_chat"
            android:layout_marginHorizontal="10dp"
            app:cardBackgroundColor="@color/grey"
            app:cardCornerRadius="17dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_round_search_24"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/cari" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="10dp"
                    android:hint="@string/cari" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_centerVertical="true"
            android:id="@+id/icn_chat"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_round_chat_24"
            android:layout_marginStart="10dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/ic_chat" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="80dp">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/vp_slider"
                android:layout_width="match_parent"
                android:layout_height="190dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/dark_blue"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/new_product"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/light_blue" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:background="@color/dark_blue">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="Beras"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_productBeras"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/light_blue" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:background="@color/dark_blue">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="Minyak Goreng"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_productMG"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/light_blue" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>



</LinearLayout>